# MkLLM

./: .gitignore  CMakeLists.txt  README.md  setup.sh
benchmarks/: cuda_common.cuh  matmul_runner.cu
benchmarks/sgemm/: cuda_common.cuh  runner.cuh  sgemm.cu  sgemm_kernels.cuh
benchmarks/sgemm/sgemm_kernels/: sgemm_1d_block_tiling.cuh  sgemm_2d_block_tiling.cuh  sgemm_2d_block_tiling_vectorized_loads.cuh  sgemm_gmem_coalesced.cuh  sgemm_naive.cuh  sgemm_shmem_cache_blocking.cuh
engine/include/: cuda_utils.cuh  inference.cuh
engine/kernels/: cuda_common.cuh  kernels.cuh  matmul_bench  matmul_failure_file.txt  matmul_runner.cu
engine/kernels/matmuls/: basic_sgemm.cuh  cublas_matmul.cuh  wmma_kernel.cuh
engine/src/: cuda_utils.cu  inference.cu  main.cu  utils.cu
